--- a/Javascript/Introdução e Conceitos Fudamentais/Constantes com valores mutáveis/index.html
+++ b/Javascript/Introdução e Conceitos Fudamentais/Constantes com valores mutáveis/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funções</title>
+    <title>Constantes com Valores Mutáveis</title>
 </head>
 
 <body>
